Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -39,6 +39,57 @@ As a security professional you should recognize, assess and protect all the foll
 
 - **Services:** These are the activities or functions provided by an organization’s systems, like email or cloud storage. Controlling access to services ensures they’re used properly and securely.
 
+```mermaid
+
+%%{init: { "theme": "base", "themeVariables": { "background": "#D3D3D3" } }}%%
+
+classDiagram
+class Information {
+  <<Asset>>
+  +All organizational data
+  +From simple files to massive databases
+  +Protected by logical access controls
+  +Goal: Keep unauthorized eyes out
+}
+
+class Systems {
+  <<Asset>>
+  +IT platforms delivering core services
+  +File servers, web servers, ERP, etc.
+  +Permissions define who can do what
+}
+
+class Devices {
+  <<Asset>>
+  +Routers, switches, laptops, phones, printers
+  +Includes personal devices holding org data
+  +Each one is an entry point or risk point
+}
+
+class Facilities {
+  <<Asset>>
+  +Buildings, rooms, server closets
+  +Physical security guards the real-world perimeter
+}
+
+class Applications {
+  <<Asset>>
+  +Software that grants access to functions and data
+  +Access must be tightly controlled
+}
+
+class Services {
+  <<Asset>>
+  +Email, cloud sync, storage, collaboration tools
+  +Access control ensures proper and safe use
+}
+
+Information -- Applications : "uses / stores"
+Applications -- Systems : "runs on"
+Systems -- Devices : "hosted on"
+Facilities -- Devices : "houses"
+Services -- Systems : "powered by"
+```
 
 :bulb: In most operating systems, access control rules define the permissions or rights that a user (or subject) has over resources (objects) such as files, directories, or processes. These rules typically fall under various logical access modes that determine the level of interaction a subject can have with an object. The basic access modes are:
 - Create: Allows a subject to create a new object (e.g., creating a new file).
