Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -92,12 +92,12 @@ Services -- Systems : "powered by"
 ```
 
 :bulb: In most operating systems, access control rules define the permissions or rights that a user (or subject) has over resources (objects) such as files, directories, or processes. These rules typically fall under various logical access modes that determine the level of interaction a subject can have with an object. The basic access modes are:
-- Create: Allows a subject to create a new object (e.g., creating a new file).
-- Update: Allows a subject to modify an existing object (e.g., editing a file).
-- Read: Allows a subject to view the content of an object (e.g., reading a document).
-- Read/Write: Allows both reading and modifying an object.
-- Execute: Allows a subject to run or execute an object (e.g., running a program).
-- Delete: Allows a subject to remove an object from the system (e.g., deleting a file).
+- **Create:** Allows a subject to create a new object (e.g., creating a new file).
+- **Update:** Allows a subject to modify an existing object (e.g., editing a file).
+- **Read:** Allows a subject to view the content of an object (e.g., reading a document).
+- **Read/Write:** Allows both reading and modifying an object.
+- **Execute:** Allows a subject to run or execute an object (e.g., running a program).
+- **Delete:** Allows a subject to remove an object from the system (e.g., deleting a file).
 
 In Windows-based systems, access control is implemented using Access Control Lists (ACLs). These ACLs define which users or groups can perform specific actions on an object. Windows permissions are typically more granular, and permissions like Read, Write, Execute, and Delete can be explicitly set for different users or groups. Windows also allows setting permissions on a file or folder, including special permissions for various administrative tasks.
 
