Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -105,9 +105,9 @@ Unix and Linux systems use a simpler, more straightforward owner-group-other mod
 
 One major aspect of IAM implementation is the method of decision-making and enforcement:
 
-- Centralized IAM: Involves a dedicated team and system overseeing all access control activities. This approach ensures rigorous oversight and monitoring but can introduce a single point of failure.
-- Decentralized IAM: Distributes access control decisions to system or information owners, allowing for greater flexibility and freedom. However, this can lead to inconsistent enforcement and a lack of unified oversight.
-- Hybrid IAM: Combines elements of both centralized and decentralized approaches. It allows certain access control decisions to be made centrally while giving system owners the freedom to manage specific areas. This approach aims to balance oversight with flexibility.
+- **Centralized IAM:** Involves a dedicated team and system overseeing all access control activities. This approach ensures rigorous oversight and monitoring but can introduce a single point of failure.
+- **Decentralized IAM:** Distributes access control decisions to system or information owners, allowing for greater flexibility and freedom. However, this can lead to inconsistent enforcement and a lack of unified oversight.
+- **Hybrid IAM:** Combines elements of both centralized and decentralized approaches. It allows certain access control decisions to be made centrally while giving system owners the freedom to manage specific areas. This approach aims to balance oversight with flexibility.
 
 ### Open Questions ###
 
