Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -150,10 +150,157 @@ To ensure consistency, regularly review and update the assignment of users to gr
 
 Authentication, Authorization, and Accounting (AAA) refers to a security framework used to manage and control access to resources within a system. Here's a breakdown of each concept:
 
-1. **Authentication** is the process (happening right after Identification) of verifying the identity of a user, device, or system. It ensures that the entity attempting to gain access is who they claim to be. Examples of authentication methods are:
+1. **Authentication** is the process (happening right after Identification) of verifying the identity of a user, device, or system. It ensures that the entity attempting to gain access is who they claim to be.
+Think of authentication like different ways to convince the system that you’re the real person.
+
+**Type 1: Something You Know**. This is information inside your head. If someone steals it or sees it, they can use it too.
+
+Examples:
+
+- Password
+
+- PIN
+
+- Security questions
+
+- Passphrase
+
+Easy to use, easy to steal.
+
+**Type 2: Something You Have**. A physical or digital object that belongs to you. If you don’t have the object, you can’t authenticate.
+
+Examples:
+
+- Mobile phone receiving an OTP
+
+- Smart card
+
+- Hardware token (RSA, YubiKey)
+
+- Digital certificate stored on a device
+
+- A mailbox
+
+If someone steals the device, the factor is compromised — unless it’s locked by another factor.
+
+**Type 3: Something You Are**. Biometric traits — physical or behavioral characteristics.
+
+Examples:
+
+- Fingerprint
+
+- Face ID
+
+- Iris scan
+
+- Voice recognition
+
+- Hand geometry
+
+These are convenient but can’t be changed if compromised.
+
+**Type 4: Somewhere You Are**. Authentication based on your location.
+
+Examples:
+
+- Logging in only from inside the office
+
+- GPS-based authentication
+
+- Geo-fencing restrictions
+
+Useful for stopping remote or foreign attacks.
+
+**Type 5: Something You Do (Behavioral)**
+
+Patterns or behaviors that are unique to you.
+
+Examples:
+
+- Typing rhythm
+
+- Mouse movement
+
+- How you hold your phone
+
+Often used in continuous authentication. And usually considered Type 3 (Something you are) authentication methods.
+
+**Context-Aware Authentication (Adaptive)** This isn’t a new factor — it’s an intelligent combination of signals.
+
+The system evaluates:
+
+- Time of day
+
+- Device health
+
+- Network you're using
+
+- Past behavior
+
+If something looks “off,” the system increases verification requirements.
+
+| Authentication Type             | What It Means           | Examples               | Strength / Weakness                 |
+| ------------------------------- | ----------------------- | ---------------------- | ----------------------------------- |
+| **Type 1** — Something You Know | Info in your memory     | Password, PIN          | Easy but weakest (can be stolen)    |
+| **Type 2** — Something You Have | Physical/digital object | Smart card, OTP, token | Stronger, but can be stolen         |
+| **Type 3** — Something You Are  | Biometric trait         | Fingerprint, Face ID   | Hard to steal but cannot be changed |
+| **Somewhere You Are**           | Location-based          | GPS, office network    | Good for restrictions               |
+| **Something You Do**            | Behavioral patterns     | Typing rhythm          | Great as an added layer             |
+| **Context-Aware**               | Risk-based decision     | Device, time, behavior | Strongest when combined with MFA    |
+
+```mermaid 
+classDiagram
+    class Type1 {
+        <<Something You Know>>
+        - Passwords
+        - PINs
+        - Passphrases
+    }
+
+    class Type2 {
+        <<Something You Have>>
+        - Hardware tokens
+        - Smart cards
+        - OTP apps
+    }
+
+    class Type3 {
+        <<Something You Are>>
+        - Fingerprints
+        - Face ID
+        - Iris scan
+    }
+
+    class Location {
+        <<Somewhere You Are>>
+        - GPS position
+        - Office network
+    }
+
+    class Behavior {
+        <<Something You Do>>
+        - Typing rhythm
+        - Gesture usage
+    }
+
+    class Context {
+        <<Context-Aware>>
+        - Device health
+        - Time of login
+        - Network risk
+    }
+
+    Type1 --> Context
+    Type2 --> Context
+    Type3 --> Context
+    Location --> Context
+    Behavior --> Context
+```
+
+Examples of practical authentication methods are:
 - Password-Based Authentication: Users enter a secret password to prove their identity.
 - Two-Factor Authentication (2FA): Requires two forms of authentication, typically a password and something else (e.g., a one-time code sent to a phone).
-- Multi-Factor Authentication (MFA): Extends 2FA by requiring multiple verification methods, such as a password, biometric data (e.g., fingerprint), or a hardware token.
+- Multi-Factor Authentication (MFA): Extends 2FA by requiring multiple verification methods, such as a password, biometric data (e.g., fingerprint), or a hardware token. A truly secure 2FA or MFA system requires multiple independent authentication factors of different types and that are hard to steal or fake, and includes resistance to phishing and replay attacks—so even if one factor is compromised, attackers still can't access your account.
 - Passwordless Authentication: Users authenticate without passwords, using methods like biometrics (fingerprint or face ID), magic links sent via email, or hardware keys (e.g., FIDO2 keys).
 
 2. **Authorization:** determines what a user or system can do after they have been authenticated. It grants permissions and access rights based on policies or roles within the system. Some Authorization Methods are:
@@ -171,6 +318,9 @@ Examples of Accounting (Auditing) are:
 - Logging and Monitoring: Tracks user activities and system events to ensure accountability and detect security incidents.
 - Audit Trails: Detailed records of access and actions taken by users within a system.
 - Session Management: Monitors user sessions and ensures proper termination after inactivity to prevent unauthorized access.
+
+:bulb: Interested in biometrics ? The table below is for you:
+<img width="650" height="412" alt="biometrics" src="https://github.com/user-attachments/assets/b465b0d5-706f-40e4-91ad-b4e078b8b01c" />
 
 
 ### Open Questions ###
