Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -155,89 +155,41 @@ Think of authentication like different ways to convince the system that you’re
 
 **Type 1: Something You Know**. This is information inside your head. If someone steals it or sees it, they can use it too.
 
-Examples:
+Examples: Password, PIN, Security questions, Passphrase
 
-- Password
-
-- PIN
-
-- Security questions
-
-- Passphrase
-
-Easy to use, easy to steal.
+:brain: Easy to use, easy to steal.
 
 **Type 2: Something You Have**. A physical or digital object that belongs to you. If you don’t have the object, you can’t authenticate.
 
-Examples:
+Examples: Mobile phone receiving an OTP, Smart card, Hardware token (RSA, YubiKey), Digital certificate stored on a device, A mailbox
 
-- Mobile phone receiving an OTP
-
-- Smart card
-
-- Hardware token (RSA, YubiKey)
-
-- Digital certificate stored on a device
-
-- A mailbox
-
-If someone steals the device, the factor is compromised — unless it’s locked by another factor.
+:brain: If someone steals the device, the factor is compromised — unless it’s locked by another factor.
 
 **Type 3: Something You Are**. Biometric traits — physical or behavioral characteristics.
 
-Examples:
+Examples: Fingerprint, Face ID, Iris scan, Voice recognition, Hand geometry
 
-- Fingerprint
-
-- Face ID
-
-- Iris scan
-
-- Voice recognition
-
-- Hand geometry
-
-These are convenient but can’t be changed if compromised.
+:brain: These are convenient but can’t be changed if compromised.
 
 **Type 4: Somewhere You Are**. Authentication based on your location.
 
-Examples:
+Examples: Logging in only from inside the office, GPS-based authentication, Geo-fencing restrictions
 
-- Logging in only from inside the office
-
-- GPS-based authentication
-
-- Geo-fencing restrictions
-
-Useful for stopping remote or foreign attacks.
+:brain: Useful for stopping remote or foreign attacks.
 
 **Type 5: Something You Do (Behavioral)**
 
 Patterns or behaviors that are unique to you.
 
-Examples:
+Examples: Typing rhythm, Mouse movement, How you hold your phone
 
-- Typing rhythm
-
-- Mouse movement
-
-- How you hold your phone
-
-Often used in continuous authentication. And usually considered Type 3 (Something you are) authentication methods.
+:brain: Often used in continuous authentication. And usually considered Type 3 (Something you are) authentication methods.
 
 **Context-Aware Authentication (Adaptive)** This isn’t a new factor — it’s an intelligent combination of signals.
 
-The system evaluates:
+The system evaluates: Time of day, Device health, Network you're using, Past behavior
 
-- Time of day
-
-- Device health
-
-- Network you're using
-
-- Past behavior
-
-If something looks “off,” the system increases verification requirements.
+:brain: If something looks “off,” the system increases verification requirements.
 
 | Authentication Type             | What It Means           | Examples               | Strength / Weakness                 |
 | ------------------------------- | ----------------------- | ---------------------- | ----------------------------------- |
