Add image to IAM preface
Added an image to enhance the preface section.

--- a/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
@@ -37,6 +37,7 @@ Decommissioning, on the other hand, is the process of retiring and removing asse
 With cloud, SaaS, remote work, and APIs everywhere, the network edge dissolved… but identity didn’t.
 Today the “front door” isn’t a firewall. It’s the moment someone authenticates.
 
+![IAAA](https://github.com/user-attachments/assets/77af9689-bf07-4e4a-8d11-24cfd6abec30)
 
 ### Open Questions ###
 
