Add firewall image to Secure Network Component section
Added an image of firewalls to enhance the explanation.

--- a/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
+++ b/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
@@ -44,6 +44,10 @@ Firewalls can be deployed in several different architectures depending on the ne
 
 - DMZ (Demilitarized Zone): A DMZ is a separate network that sits between the internal network and the external internet. The firewall serves as a barrier between these networks, ensuring that sensitive internal systems are protected from external threats while allowing some services, like web servers, to be accessed from the outside world.
 
+ 
+![FIREWALLS](https://github.com/user-attachments/assets/e724d976-72bc-4532-a665-f293b6efe8fe)
+
+
 Network devices are the building blocks of any communication infrastructure, allowing data to flow between different network segments and connecting various types of devices, like:
 
 - **Repeaters** amplify or regenerate signals to extend the reach of a network. They are commonly used in environments where signal strength may degrade over long distances.
