Add images for SOAR and SOC explanations
Added images to enhance the explanation of SOAR and its components.

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -164,6 +164,8 @@ Cybersecurity isn’t just about firewalls, rules, and alerts anymore — it’s
 
 Think of SOAR (Security Orchestration, Automation, and Response)  as the brain and nervous system of your security operations center (SOC). It doesn’t replace your analysts; it supercharges them. Imagine a typical day in a SOC: thousands of alerts, many of them false positives. Analysts are constantly switching tools — the SIEM, ticketing systems, threat intel feeds, logs, firewalls — while manually documenting every step. It’s exhausting, slow, and error-prone. SOAR takes those fragmented workflows and weaves them into a cohesive, automated system. It connects the tools, enforces consistency, and executes repetitive tasks faster than any human could. But it doesn’t act blindly. That’s where **playbooks** and **runbooks** come in.
 
+![SOC](https://github.com/user-attachments/assets/856a552c-ba90-444c-87fb-2a62e9f67bde)
+
 Here’s an analogy: A playbook is like your GPS route — it tells you where you’re going and why. A runbook is the set of exact turns you’ll make — the how.
 - **Playbooks** define high-level logic. For example: “If a phishing email is detected, extract sender data, check against known indicators of compromise (IOCs), isolate the endpoint, and notify HR.”
 - **Runbooks** automate the actual steps: “Query threat intel database → Extract domain → If domain reputation is low → Block domain on the mail gateway → Generate ticket in system X.”
@@ -194,6 +196,9 @@ Whereas machine learning is about pattern recognition and prediction, **artifici
 In SOAR environments, AI helps triage events — not just saying “this looks bad,” but suggesting why and what to do about it. It’s like having a junior analyst who’s read every security casebook and can make educated recommendations — instantly.
 
 :necktie: Why use SOAR? To scale your team’s effectiveness and reduce human error. Why trust ML and AI? Because attackers are already using them, and traditional defenses can’t keep up. What’s the risk? Automation without governance is dangerous. Every playbook needs review. Every ML model needs training. Every AI suggestion needs oversight.
+
+![SOAR](https://github.com/user-attachments/assets/ffd43e61-1c11-4353-bee6-90f6642cf0e9)
+
 
 ### Open Questions ###
 
