Fix table formatting in NIS2 directive document

--- a/DOMAIN1: Security and Risk Management/1.D.7 Elevating EU Cyber Resilience: A Technical Deep Dive into the NIS2 Directive.md
+++ b/DOMAIN1: Security and Risk Management/1.D.7 Elevating EU Cyber Resilience: A Technical Deep Dive into the NIS2 Directive.md
@@ -23,10 +23,10 @@ The scope of NIS2 is notably broader than NIS1. The industries falling under the
 
 | Essential Entities (Stricter Supervision) | Important Entities |
 | :--- | :--- |
-| **Energy** | Postal and courier services |
-| **Transport** | Waste |
-| **Finance** | Chemicals |
-| **Healthcare** | Food |
+| Energy | Postal and courier services |
+| Transport | Waste |
+| Finance | Chemicals |
+| Healthcare | Food |
 | Digital infrastructure | Medical devices |
 | Public administration | Manufacture of critical goods |
 | Space | Digital service providers |
