Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -52,7 +52,7 @@ flowchart LR
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
-:link: NIST SP 800-30r1 provides a list of threat categories, concepts and examples: https://csrc.nist.gov/pubs/sp/800/30/r1/final
+:link: [NIST SP 800-30r1](https://csrc.nist.gov/pubs/sp/800/30/r1/final) provides a list of threat categories, concepts and examples 
 
 ### Open Questions ###
 1. What is the key difference between a threat and a vulnerability?
