Revise ISO-OSI model analogy and add diagram
Updated the analogy for the ISO-OSI model and added a mermaid diagram to illustrate the data encapsulation process.

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -32,7 +32,7 @@ The Open Systems Interconnection (OSI) model is a conceptual framework that stan
 
 At its core, the OSI model is layered, with each layer representing a different function in the communication process. These layers ensure that complex network interactions can be broken down into manageable components, making it easier to design, secure, and troubleshoot networks. The OSI model serves as a roadmap for security controls, as threats often target specific layers in different ways. Understanding these layers allows for the implementation of layered security (defense in depth) to mitigate risks effectively.
 
-The ISO-OSI model can be understood as a structured process similar to how a letter is sent from one company to another. The image provides an analogy where each OSI layer is represented by a corresponding role in a business and postal service.
+The ISO-OSI model can be understood as a structured process similar to how a letter is sent from one company to another. The table below provides an analogy where each OSI layer is represented by a corresponding role in a business and postal service.
 
 | OSI Layer            | Analogy Role                        | Function in Networking |
 |-----------------------|-------------------------------------|-------------------------|
@@ -54,6 +54,32 @@ For example:
 3. Network Layer – Adds IP addresses for routing.
 4. Data Link Layer – Adds MAC addresses for local delivery.
 5. Physical Layer – Converts everything into electrical signals or radio waves.
+
+```mermaid
+flowchart LR
+
+    A["Application – DATA<br/>
+    [ Payload ]"]
+
+    B["Transport – SEGMENT<br/>
+    [ TCP/UDP Header | Payload ]"]
+
+    C["Network – PACKET<br/>
+    [ IP Header | Payload ]"]
+
+    D["Data Link – FRAME<br/>
+    [ MAC Header | Payload | FCS ]"]
+
+    E["Physical – BITS<br/>
+    [ 101010101010 ]"]
+
+
+
+    classDef grey fill:#f2f2f2,stroke:#555,color:#000
+    class A,B,C,D,E grey
+
+
+```
 
 At the end of this process, what started as simple data has become a structured network packet, ready to be transmitted over the network.
 When the data reaches its destination, the process reverses:
