Add table of common network ports and services
Added a table summarizing common network ports and their associated protocols and services.

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -144,7 +144,37 @@ Port 25: SMTP (Simple Mail Transfer Protocol) – used for sending emails.
 - **Registered ports (1024–49151):** These are used by software applications for communication, but they are not as commonly associated with standardized services. Developers can register these ports with the IANA (Internet Assigned Numbers Authority) for their specific services.
 - **Dynamic or Private ports (49152–65535):** These are ephemeral ports used for short-lived communications. They are often assigned temporarily by the operating system for client-side connections, such as when your browser connects to a website. These ports are not assigned to any particular service and are typically used for the duration of the session.
 
+The following table recaps the most common ports:
 
+| Port | Protocol | Service                | Description                              |
+|-------|----------|------------------------|------------------------------------------|
+| 20    | TCP      | FTP Data               | File Transfer Protocol (data transfer)   |
+| 21    | TCP      | FTP Control            | File Transfer Protocol (commands)        |
+| 22    | TCP      | SSH                    | Secure Shell for remote login             |
+| 23    | TCP      | Telnet                 | Unencrypted text communications           |
+| 25    | TCP      | SMTP                   | Simple Mail Transfer Protocol (email)     |
+| 53    | TCP/UDP  | DNS                    | Domain Name System (queries and zone transfer) |
+| 67    | UDP      | DHCP Server            | Dynamic Host Configuration Protocol server|
+| 68    | UDP      | DHCP Client            | Dynamic Host Configuration Protocol client|
+| 69    | UDP      | TFTP                   | Trivial File Transfer Protocol             |
+| 80    | TCP      | HTTP                   | HyperText Transfer Protocol                |
+| 110   | TCP      | POP3                   | Post Office Protocol v3 (email retrieval)  |
+| 123   | UDP      | NTP                    | Network Time Protocol                      |
+| 143   | TCP      | IMAP                   | Internet Message Access Protocol           |
+| 161   | UDP      | SNMP                   | Simple Network Management Protocol         |
+| 194   | TCP      | IRC                    | Internet Relay Chat                        |
+| 443   | TCP      | HTTPS                  | HTTP over TLS/SSL (secure web browsing)    |
+| 445   | TCP      | SMB                    | Server Message Block (file sharing)        |
+| 465   | TCP      | SMTPS                  | SMTP over SSL                              |
+| 514   | UDP/TCP  | Syslog                 | System logging                             |
+| 520   | UDP      | RIP                    | Routing Information Protocol               |
+| 587   | TCP      | SMTP (submission)      | Mail submission                            |
+| 993   | TCP      | IMAPS                  | IMAP over SSL                             |
+| 995   | TCP      | POP3S                  | POP3 over SSL                             |
+| 1433  | TCP      | Microsoft SQL Server   | Database server                            |
+| 3389  | TCP      | RDP                    | Remote Desktop Protocol                    |
+| 5060  | UDP/TCP  | SIP                    | Session Initiation Protocol (VoIP signaling) |
+| 5061  | TCP      | SIP over TLS           | Secure SIP                                |
 
 When a device communicates over the network, it uses a combination of the IP address and port number to ensure that data is sent to the correct application. This is what makes it possible for multiple applications on the same machine to use the same network interface.
 - **Client-side (Outbound connection)**:
