Enhance document with additional IP addressing resources
Added links for further learning about IP addressing and subnetting.

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -358,6 +358,8 @@ Each of these subnets can have 62 usable IP addresses (after excluding the netwo
 
 :link: You don’t need to calculate subnets manually, but you must understand how subnetting impacts security policies, access control, and network architecture. A detailed explanation of subnetting is available [here] (https://en.wikipedia.org/wiki/Subnet)
 
+.link: You can learn more about IP addressing and subnetting [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN4%3A%20Communication%20and%20Network%20Security/4.D.1%20IPv4%20Addressing%20and%20Subnetting.md#4d1-ipv4-addressing-and-subnetting)
+
 **IPv6** was introduced to solve IPv4 exhaustion. It uses a 128-bit address space, providing 2¹²⁸ addresses (more than enough for every device on Earth).
 IPv6 addresses are written in hexadecimal notation and divided into 8 groups of 16 bits, separated by colons.
 An Example of an IPv6 Address is: 2001:0db8:85a3:0000:0000:8a2e:0370:7334
