Revise access control flowchart for clarity
Updated flowchart to clarify access control based on user interactions with competing company data.

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
@@ -480,7 +480,7 @@ Limitations of the Brewer and Nash Model:
 - May restrict legitimate work if employees need to collaborate across different companies.
 
 ```mermaid
-flowchart TD
+flowchart LR
     A[User requests access to Company A data] --> B{Has user accessed<br> competing company data?}
     B -- No --> C[Access granted to Company A]
     C --> D[User now associated<br> with Company A's conflict class]
