Enhance risk reporting section with key concepts
Added explanation of risk capacity, tolerance, and appetite to enhance understanding of risk reporting.

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -571,6 +571,11 @@ Risk reporting is a critical task following a risk analysis, involving the creat
 
 :necktie: Risk reporting is a fundamental skill for a security professional because it enables effective communication of potential threats, vulnerabilities, and mitigation strategies to stakeholders, facilitating informed decision-making and proactive risk management.
 
+For an effective risk reporting it is very important to understand the concepts of Risk capacity, tolerance and appetite. Think of risk appetite as what management wants to accept, risk tolerance as how much variation they’ll allow day-to-day, and risk capacity as the absolute maximum the organization can survive. 
+
+[Uploading Risk_appetite.pdf…]()
+
+
 ### Open Questions ###
 1. What is the primary purpose of risk reporting?
 <details>
