Enhance risk management concepts with image and details
Added an image related to risk concepts and clarified risk appetite, tolerance, and capacity.

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -573,7 +573,8 @@ Risk reporting is a critical task following a risk analysis, involving the creat
 
 For an effective risk reporting it is very important to understand the concepts of Risk capacity, tolerance and appetite. Think of risk appetite as what management wants to accept, risk tolerance as how much variation they’ll allow day-to-day, and risk capacity as the absolute maximum the organization can survive. 
 
-[Uploading Risk_appetite.pdf…]()
+<img width="800" height="2000" alt="Risk_concepts" src="https://github.com/user-attachments/assets/3e5c98cd-4123-4023-a6cc-0ef26513d232" />
+
 
 
 ### Open Questions ###
