Enhance network security section with directional terms
Added directional terms for data and communication flows in cybersecurity and network management, including Northbound, Southbound, Eastbound, and Westbound, along with their descriptions and security focuses.

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -1819,6 +1819,20 @@ Benefits of SDN are
 - **Automation:** SDN supports network automation, reducing the need for manual configuration and maintenance. This also minimizes the risk of human error and speeds up response times to network changes or issues.
 - **Cost Efficiency:** With SDN, organizations can leverage commodity hardware (rather than expensive, proprietary network devices) and deploy network services more efficiently. This leads to cost savings in both hardware and operational expenses.
 
+In cybersecurity and network management, data and communication flows are often described using directional terms that help clarify their purpose and security focus.
+- **Northbound:** This means communication or data flow going up towards management systems or users. It focuses on making sure there is good visibility, logging, and APIs to monitor and interact with the system.
+- **Southbound:** This is communication going down towards the infrastructure like servers, devices, or hardware. The focus here is on controlling and enforcing security policies to protect the infrastructure.
+- **Eastbound:** This is internal communication between components or systems within the same environment (sideways). It emphasizes limiting internal movement by using Zero Trust principles and segmentation to reduce risks.
+- **Westbound:** This refers to communication going outside the environment, between external systems or partners. The focus is on managing trust boundaries and safely sharing data across those boundaries.
+
+| Direction   | Description                   | Security Focus                 |
+|-------------|-------------------------------|-------------------------------|
+| Northbound  | Toward management / users      | Logging, APIs, visibility      |
+| Southbound  | Toward infrastructure          | Control, enforcement           |
+| Eastbound   | Internal lateral movement      | Zero Trust, segmentation       |
+| Westbound   | External lateral communication | Trust boundaries, data sharing |
+
+
 ### Open Questions ###
 
 1. How does Software-Defined Networking (SDN) differ from traditional network architectures?
