Explain order of volatility in digital forensics
Added a section on the order of volatility in digital forensics, explaining the priority of data collection based on volatility levels.

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -372,6 +372,17 @@ Let’s start with the tools. A good investigator doesn’t just rely on instinc
 
 :bulb: At the core of all this is a mindset: precision, patience, and proof. In forensics, speed must never compromise thoroughness.
 
+In digital forensics, the **order of volatility** refers to the priority of collecting data based on how quickly it can disappear or change. The most volatile data, like CPU registers, cache, and RAM contents, is lost first when a system powers down or reboots, so it must be captured immediately. Next comes data stored on temporary storage such as swap files or logs in memory. Less volatile data includes files on the hard drive, which persist longer but can still be altered. Finally, archived backups and offline storage are the least volatile but may take longer to access. Following this order ensures investigators preserve the most critical and fleeting evidence first.
+
+| Volatility Level       | Data Type                          | Description                          |
+|-----------------------|----------------------------------|------------------------------------|
+| **Most Volatile**      | CPU registers, cache, RAM         | Lost immediately on power off or reboot; must be captured first |
+|                       | Memory-resident processes, network connections | Temporary data in active system memory and network states |
+| **Moderately Volatile**| Swap files, paging files, logs    | Stored on disk but reflect recent system state; can be overwritten |
+| **Less Volatile**      | Hard drive files and system data  | Persistent data on storage devices, but can be modified or deleted |
+| **Least Volatile**     | Archived backups, offline storage | Stored off-system, slow to access but stable over time |
+
+
 
 ### Open Questions ###
 
