--- a/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
@@ -33,6 +33,9 @@ graph TD
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    
+    class A center
+    class C,C1,C2,I,I1,I2,AV,AV1,AV2,AU,AU1,AU2,N,N1,N2 node
 ```
 
 :brain: Every cybersecurity expert should retain knowledge of the five pillars of information security, comprehend their significance, and demonstrate the capability to correctly associate practical examples with the respective pillar.
